insurance screen alignmement issue

--- a/src/app/provider/patients/insurance/insurance.component.scss
+++ b/src/app/provider/patients/insurance/insurance.component.scss
@@ -172,3 +172,11 @@
 .cross-mark {
   border: "1px solid #fff;"
 }
+.btn-primary
+{
+  width: 164px;
+    margin-left: -38px;
+    margin-right: 184px;
+    height: 45px;
+  
+}
